add more comments in the code